Add get quizzes by team and user and bonus logs
